tests/FSharp.Compiler.ComponentTests/Conformance/TypeForwarding/NegativeCases/Interface_NG_MethodParam.fs
let nc = new NormalInterface()
let mp = new N_002.MethodParameter()


let rv = nc.getValue() + mp.Method(nc)

System.Console.WriteLine(rv)
exit rv
